namespace foriver4725.InputManager
{
    internal static class InputSample
    {
        private static void SampleFunction()
        {
            bool inputClick = InputManager.Click.Bool;
            bool inputHold = InputManager.Hold.Bool;
            bool inputValue0 = InputManager.Value0.Bool;
            float inputValue1 = InputManager.Value1.Float;
            UnityEngine.Vector2 inputValue2 = InputManager.Value2.Vector2;
            UnityEngine.Vector3 inputValue3 = InputManager.Value3.Vector3;
        }
    }
}
